# ollama-mesh

./: AGENT.md  HEARTBEAT.md  SKILLS.md  pyproject.toml
mesh/: config.py  daemon.py  discovery.py  executor.py  heartbeat.py  ollama.py  peer.py  repl.py
