[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-mesh"
version = "0.1.0"
description = "P2P mesh network for Ollama LLM instances"
requires-python = ">=3.11"
dependencies = [
    "zeroconf>=0.131.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "croniter>=2.0.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mesh"]

[project.scripts]
ollama-mesh = "mesh.daemon:main"
